# llm-dictation

./: .gitignore  API_SETUP.md  CLAUDE.md  MVP.md  README.md  SUBAGENT_GUIDELINES.md  VISION.md  pyproject.toml  requirements.txt  setup_env.sh  test_integration.py  validate_integration.py
docs/sessions/: session01.md
src/: __init__.py  main.py
src/audio/: __init__.py  recorder.py  transcriber.py
src/cleanup/: __init__.py  cleaner.py  providers.py
src/ui/: __init__.py  terminal.py
tests/: __init__.py  requirements-dev.txt  test_integration.py
